# matrix-mcp-server-r2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.a0proj/: project.json
.a0proj/instructions/: project-instructions.md
.cursor/rules/: rust-e2ee.mdc
.github/workflows/: docker-publish.yml
reference/docs/: agent-matrix-ops-manual.md  plugin-architecture-research.md  rust-mcp-server-design.md  rust-mcp-server-plan.md
reference/ts-source/: package.json
reference/ts-source/src/matrix/: client.ts
reference/ts-source/src/tools/tier0/: rooms.ts
spec/: E2EE-Prep-Checklist-for-Rust-MCP-Server.md  matrix-mcp-v1-v2.yml
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
src/matrix/: cache.rs  client.rs  mod.rs
src/mcp/: mod.rs  server.rs  transport.rs
src/tools/: mod.rs
src/tools/tier0/: get_all_users.rs  get_direct_messages.rs  get_messages_by_date.rs  get_my_profile.rs  get_notification_counts.rs  get_room_info.rs  get_room_members.rs  get_room_messages.rs  get_user_profile.rs  identify_active_users.rs  list_joined_rooms.rs  mod.rs  search_public_rooms.rs
src/tools/tier1/: create_room.rs  invite_user.rs  join_room.rs  leave_room.rs  mod.rs  send_direct_message.rs  send_message.rs  set_room_name.rs  set_room_topic.rs
tests/: cache_tests.rs  config_tests.rs  integration_tests.rs  server_tool_list_tests.rs
