[package]
name = "matrix-mcp-server-r2"
version = "0.1.0"
edition = "2021"
authors = ["l0r3zz"]
description = "Rust implementation of Matrix MCP Server - drop-in replacement for TypeScript version"
license = "MIT"
repository = "https://github.com/l0r3zz/matrix-mcp-server-r2"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "rt-multi-thread", "signal"] }

# HTTP framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# MCP SDK
rmcp = { version = "1.2", default-features = false, features = ["server", "macros", "transport-streamable-http-server"] }

# Matrix SDK
matrix-sdk = { version = "0.10", default-features = false, features = ["rustls-tls"] }
ruma = { version = "0.12", features = ["client-api-c", "compat"] }

# Serialization & Schema
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment/config
dotenvy = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"

# URL parsing
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serial_test = "3.2"
regex = "1"

[features]
default = []
e2ee = ["matrix-sdk/e2e-encryption"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
